--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "jwt-decode": "^3.1.2",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.7.2",
